# intel-extension-for-pytorch

./: .gitignore  .gitmodules  CMakeLists.txt  example_onestorage.py  setup-mpu.py
cmake/: BuildFlags.cmake  Options.cmake
cmake/mpu/: BuildFlags.cmake  Codegen.cmake
csrc/: CMakeLists.txt
csrc/mpu/: CMakeLists.txt
csrc/mpu/aten/operators/: TripleOps.cpp
csrc/mpu/xetla/: CMakeLists.txt
csrc/mpu/xetla/kernels/: CMakeLists.txt
csrc/oneStorage/: CMakeLists.txt  io.cpp  io.h  pywrapper.cpp
docker/: run_docker.sh
intel_extension_for_pytorch/: __init__.py  cifar10.py  dataset_perf_profile.py  onestorage.py  resNet-on-imagenet.py  resNet50.py
intel_extension_for_pytorch/csrc/xpu/: CMakeLists.txt
intel_extension_for_pytorch/onestor/image_classification/: __init__.py  dataloaders.py  datasets.py  train.py  utils.py
